# IOHexperimenter

./: .BUILD_CPP  .BUILD_PYTHON  .INSTALL_WITH_MAKE  .INSTALL_WITH_PIP  .RUN  .RUN_CPP  .RUN_PYTHON  .Rbuildignore  .clang-format  .conda.yaml  .dockerignore  .gitignore  .gitmodules  .pip.txt  .readthedocs.yml  .workflows.md  .workstory.md  AUTHORS  BUILD  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  DESCRIPTION  Dockerfile  INSTALL  INSTALL_IOH  INSTALL_WITH_MAKE  IOHexperimenter_example.md  IOHprofiler.i  LICENSE  LICENSE.md  MANIFEST.in  Makefile  Makefile.in  NAMESPACE  README.md  RUN  conda.yaml  do.py  generate_docs.py  (+12 more)
doc/: CMakeLists.txt  CmakeLists.txt  generate_docs.py  logger_architecture.dia
doc/docs/: analyzer_8hpp_source.html  annotated.html  attractive__sector_8hpp_source.html  bbob_8hpp_source.html  bbob__problem_8hpp_source.html  bent__cigar_8hpp_source.html  bueche__rastrigin_8hpp_source.html  classes.html  classioh_1_1_experimenter-members.html  classioh_1_1_experimenter.html  classioh_1_1_logger-members.html  classioh_1_1_logger.html  classioh_1_1_problem-members.html  classioh_1_1_problem.html  classioh_1_1_problem.js  classioh_1_1common_1_1_cpu_timer-members.html  classioh_1_1common_1_1_cpu_timer.html  classioh_1_1common_1_1file_1_1_file_system_item-members.html  classioh_1_1common_1_1file_1_1_file_system_item.html  classioh_1_1common_1_1file_1_1_unique_folder-members.html  classioh_1_1common_1_1file_1_1_unique_folder.html  classioh_1_1logger_1_1_combine-members.html  classioh_1_1logger_1_1_combine.html  classioh_1_1logger_1_1_e_a_h-members.html  classioh_1_1logger_1_1_e_a_h.html  classioh_1_1logger_1_1_flat_file-members.html  classioh_1_1logger_1_1_flat_file.html  classioh_1_1logger_1_1_levels-members.html  classioh_1_1logger_1_1_levels.html  classioh_1_1logger_1_1_nadir_stat-members.html  classioh_1_1logger_1_1_nadir_stat.html  classioh_1_1logger_1_1_nadir_stat.js  classioh_1_1logger_1_1_property-members.html  classioh_1_1logger_1_1_property.html  classioh_1_1logger_1_1_stat-members.html  classioh_1_1logger_1_1_stat.html  classioh_1_1logger_1_1_store-members.html  classioh_1_1logger_1_1_store.html  classioh_1_1logger_1_1_store.js  classioh_1_1logger_1_1_watcher-members.html  (+483 more)
doc/docs/search/: all_13.js  all_15.js  all_4.js  all_7.js  all_b.js  all_e.js  classes_10.js  classes_14.js  classes_5.js  classes_6.js  classes_8.js  classes_c.js  functions_1.js  functions_13.js  functions_2.js  functions_7.js  functions_9.js  functions_a.js  functions_e.js  groups_0.js  groups_1.js  groups_3.js  groups_5.js  searchdata.js  typedefs_2.js  typedefs_3.js  typedefs_6.js  typedefs_a.js  variables_0.js  variables_1.js  variables_11.js  (+2 more)
doc/doxygen/: .gitignore  Doxyfile  Doxyfile.in
doc/sphinx/: .gitignore  conf.py  index.rst  requirements.txt
example/: CMakeLists.txt  CmakeLists.txt  Example_StarDiscr.ipynb  Example_Submodular.ipynb  README.md  add_new_problem.cpp  add_new_problem.hpp  analyzer.cpp  eafh.cpp  evaluate_some_problems.cpp  example_list_maxcoverage  example_list_maxcut  example_list_maxinfluence  example_list_pwt  example_sbox.ipynb  example_star_discr.ipynb  example_submodular.ipynb  example_submodular_instances.hpp  experiment_example.h  experiment_example.hpp  graph.cpp  gsemo.cpp  logger_example.h  logger_example.hpp  main.cpp  multi_objective.cpp  problem_example.h  problem_example.hpp  python_example_publish.py  read_graph_instance.cpp  removed.cpp  run_submodular_instances.cpp  suite_example.h  suite_example.hpp  tutorial.ipynb
example/example_graphs/: G3  G5  example_graph0_c_linear  example_graph0_c_quadratic  example_graph0_c_unweighted  example_graph1_c_linear  example_graph2_c_quadratic  example_graph3_c_linear  example_graph3_c_quadratic  facebook_combined  facebook_combined_c_linear_1
example/example_pwt/: a280_n1395_uncorr-similar-weights_05.ttp  fnl4461_n22300_uncorr-similar-weights_05.ttp  fnl4461_n44600_uncorr_10.ttp  pla33810_n33809_bounded-strongly-corr_01.ttp
example/example_submodular/: example_list_maxcoverage  example_list_maxcut  example_list_maxinfluence
ioh/: CMakeLists.txt  README.md  __init__.py  __init__.pyi  experimenter.py
ioh/iohcpp/: __init__.pyi  problem.pyi  suite.pyi
ioh/markdown/: index.md  suite.md
ioh/src/: empirical_attainment.cpp  experimenter.cpp  integer.cpp  integer_suite.cpp  ioh.cpp  logger.cpp  numpy.hpp  old.cpp  pch.hpp  problem.cpp  problem_helpers.cpp  property.cpp  pyproperty.hpp  real.cpp  real_suite.cpp  suite.cpp  suite_helpers.cpp  trigger.cpp
test/: CMakeLists.txt  README.md  generateData.cpp  test-bbob-problem.cpp  test-pbo-problem.cpp
test/problem/: test_bbob_problem.cpp  test_pbo_problem.cpp  utils.hpp
test/src/: bbobfitness5.in  entrypoint.cpp  test_bbob_problem.cpp  test_experiment.cpp  test_ioh.cpp  test_pbo_problem.cpp  test_problems.cpp
tests/: CMakeLists.txt  README.md  example_list_maxinfluence  example_list_pwt  t-bbob-csvlogger.cpp  t-bbob-random.cpp  t-ecdf_logger.cpp  t-logger-combination.cpp  t-python-problem.cpp  test_IOH_benchmarking.py  test_IOH_function.py  test_IOH_logger.py  test_problem.py  testthat.R  utils.py
tests/cpp/: README.md  entrypoint.cpp  utils.hpp
tests/example_graphs/: G2  example_graph1  example_graph1_c_linear  example_graph1_c_quadratic  example_graph1_c_unweighted  example_graph2_c_quadratic  example_graph2_c_unweighted  example_graph3  example_graph3_c_linear  example_graph3_c_quadratic  example_graph3_c_unweighted  facebook_combined_c_linear_3
tests/example_pwt/: a280_n1395_uncorr-similar-weights_05.ttp  a280_n2790_uncorr_10.ttp  a280_n279_bounded-strongly-corr_01.ttp  fnl4461_n44600_uncorr_10.ttp  fnl4461_n4460_bounded-strongly-corr_01.ttp  pla33810_n33809_bounded-strongly-corr_01.ttp
tests/python/: bbobfitness5.in  test_add.py  test_array_layout.py  test_cec_functions.py  test_downloader.py  test_dynamic_bin_val.py  test_examples.py  test_experiment.py  test_logger.py  test_new.py  test_package.py  test_problem.py  test_stuff.py  test_wrap_problem.py
tests/static/: conf.ini
tests/testthat/: test_experimenter.R
(+4258 files in other folders)
